= Changelog

== unreleased

* feat: configurable tf and provider versions
* fix: use provider region from config file

== 0.1.0

* feat: Added `-l` switch to list discovered accounts.

== 0.0.2

* fix: Fixed an exception when `exclude_accounts` is not set.

== 0.0.1

* Initial release